# ats-beater

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose-deploy.yml  docker-compose.yml  pyproject.toml  resume.cls
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_resume_generated_status.py  b3c4d5e6f7a8_add_tenants_and_admin.py  c4d5e6f7a8b9_add_roasts_table.py  e6f7a8b9c0d1_credit_system.py  e88ebc3778ab_initial_models.py  f7a8b9c0d1e2_seed_credit_packs.py  g8h9i0j1k2l3_llm_requests.py  h9i0j1k2l3m4_add_roast_share_id.py  i0j1k2l3m4n5_add_roast_views.py  j1k2l3m4n5o_add_user_ai_settings_and_chat_messages.py  k2l3m4n5o6p_drop_credit_system.py  l3m4n5o6p7q_add_resume_templates.py  m4n5o6p7q8r_add_ai_provider_fields.py  n5o6p7q8r9s_add_provider_to_llm_requests.py  o6p7q8r9s0t_add_bold_keywords_to_jobs.py
app/: config.py  dependencies.py  exceptions.py  main.py
app/api/: admin.py  auth.py  chat.py  credits.py  jobs.py  payments.py  profile_chat.py  profiles.py  progress.py  roasts.py  templates.py
app/database/: session.py
app/models/: __init__.py  ai_settings.py  base.py  chat_message.py  credit.py  job.py  profile.py  roast.py  roast_view.py  tenant.py  token_usage.py  user.py
app/schemas/: ai_settings.py  credit.py  custom_resume.py  job.py  profile.py  resume.py  roast.py  subscription.py  templates.py  tenant.py  user.py
docs/: provider-parity-qa.md
frontend/: index.html  landing.html  roast-share.html
infra/: deploy-cloudrun.sh  entrypoint.sh  start.sh
tests/: conftest.py
(+70 files in other folders)
